--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,11 @@
 /* Base Style CSS Start */
 
-/* Font */
+/* Fonts */
+
+/* Roboto Font */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
+/* Gilroy Font */
 
 @font-face {
   font-family: "Gilroy";
@@ -111,3 +116,311 @@ p a {
 }
 
 /* Base Style CSS End */
+
+/* Header Part CSS Start */
+
+/* Navigation Section CSS Start */
+
+.navbar {
+  padding: 30px 0;
+}
+
+.navbar.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
+  -webkit-animation: sticky 1.2s;
+  animation: sticky 1.2s;
+}
+
+@keyframes sticky {
+  from {
+    top: -100px;
+  }
+  to {
+    top: 0;
+  }
+}
+
+.main-menu ul li {
+  padding: 20px 0;
+  padding-right: 60px;
+  position: relative;
+}
+
+.main-menu ul li a {
+  font-size: 18px;
+  font-weight: 700;
+  color: var(--secondary);
+  transition: all 0.3s ease-in-out;
+}
+
+.main-menu ul li a:hover {
+  color: #f7570e;
+  text-decoration: underline;
+}
+
+.main-menu ul li a.active {
+  color: var(--primary);
+  padding-bottom: 4px;
+  border-bottom: 5px solid var(--primary);
+}
+
+.main-menu ul li a:focus,
+.main-menu ul li a:active {
+  color: var(--primary);
+  text-decoration: underline;
+}
+
+.dropdown {
+  position: absolute;
+  top: 65px;
+  left: 0;
+  width: 300px;
+  background: #f9f9f9;
+  display: none;
+  z-index: 999;
+}
+
+.main-menu ul li:focus-within,
+.main-menu ul li:hover > .dropdown {
+  display: initial;
+}
+
+.dropdown li {
+  padding: 0 !important;
+  border-bottom: 1px solid var(--white);
+}
+
+.dropdown li a {
+  display: block;
+  font-family: "Roboto", sans-serif !important;
+  font-size: 18px !important;
+  font-weight: 400 !important;
+  color: var(--secondary) !important;
+  padding: 16px 0;
+  padding-left: 30px;
+  transition: all 0.3s ease-in-out;
+}
+
+.dropdown li a.active {
+  color: var(--white) !important;
+  background: var(--primary);
+}
+
+.dropdown li a:hover {
+  background: var(--primary);
+  color: var(--white) !important;
+}
+
+/* Navigation Section CSS End */
+
+/* Mobile Navigation Section CSS Start */
+
+#Mobile-menu {
+  background: var(--white);
+}
+
+#Mobile-menu.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
+  -webkit-animation: sticky 1.2s;
+  animation: sticky 1.2s;
+}
+
+@keyframes sticky {
+  from {
+    top: -100px;
+  }
+  to {
+    top: 0;
+  }
+}
+
+.mobile-menu-wrapper {
+  padding: 20px;
+}
+
+.bars {
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.bars:hover {
+  color: var(--primary);
+}
+
+.bar-icon {
+  font-size: 20px;
+  padding-right: 9px;
+}
+
+.bars span {
+  position: relative;
+  font-size: 16px;
+  font-weight: 700;
+  margin-bottom: 4px;
+}
+
+.mobile-logo {
+  max-width: 135px;
+}
+
+.mobile-call a span {
+  font-size: 25px;
+  font-weight: 600;
+  color: var(--secondary);
+}
+
+.mobile-nav {
+  position: fixed;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100vh;
+  padding: 30px 0;
+  background: var(--white);
+  overflow-x: hidden;
+  overflow-y: scroll;
+  transition: left 0.3s ease-in-out;
+  z-index: 999;
+}
+
+.mobile-nav.active {
+  left: 0;
+}
+
+.mobile-main-menu ul li {
+  margin-left: 0;
+}
+
+.mobile-main-menu ul li a {
+  display: flex;
+  justify-content: space-between;
+  font-size: 20px;
+  font-weight: 700;
+  text-decoration: none;
+  color: var(--secondary);
+  padding: 13px 15px;
+  transition: all 0.3s ease-in-out;
+}
+
+.mobile-main-menu ul li > a.m-active,
+.mobile-main-menu ul li > a:hover {
+  color: var(--primary) !important;
+}
+
+.sub-menu {
+  background: #f9f9f9;
+  display: none;
+}
+
+.sub-menu a {
+  font-family: "Roboto", sans-serif;
+  font-size: 18px !important;
+  font-weight: 400 !important;
+  color: var(--secondary);
+  padding-left: 30px !important;
+  border-bottom: 2px solid var(--white);
+}
+
+.sub-menu a:hover {
+  color: var(--white) !important;
+  background: var(--secondary);
+}
+
+.sub-btn i {
+  font-size: 16px;
+}
+
+.sub-btn.active {
+  color: var(--white) !important;
+  background: var(--primary) !important;
+}
+
+.sub-btn.active:hover {
+  color: var(--white) !important;
+}
+
+.fa-minus {
+  display: none;
+  padding-top: 8px;
+}
+
+.sub-btn.active .fa-plus {
+  display: none;
+}
+
+.sub-btn.active .fa-minus {
+  display: block;
+}
+
+#cross-icon {
+  display: flex;
+  justify-content: end;
+  padding-right: 15px;
+}
+
+#cross-icon i {
+  font-size: 20px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+#cross-icon i:hover,
+#cross-icon i:focus,
+#cross-icon i:active {
+  color: var(--primary);
+}
+
+.mobile-menu-bottom {
+  padding: 30px 12px 0 20px;
+}
+
+.mobile-menu-bottom ul li a {
+  font-size: 20px;
+  color: #a1aeb7;
+}
+
+.mobile-menu-bottom ul li {
+  width: initial;
+  padding-right: 30px;
+}
+
+.mobile-menu-bottom > ul {
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 15px;
+}
+
+.mobile-menu-bottom p {
+  font-size: 14px;
+  color: #7b7b7b;
+  margin-bottom: 0;
+}
+
+.mobile-menu-bottom p a {
+  font-weight: 400;
+  color: #7b7b7b;
+  text-decoration: underline;
+}
+
+.mobile-privacy-menu ul li {
+  padding: 0;
+  padding-bottom: 10px;
+}
+
+.mobile-privacy-menu ul li a {
+  font-size: 16px;
+  text-decoration: underline !important;
+  color: #7b7b7b;
+}
+
+/* Mobile Navigation Section CSS End */
+
+/* Header Part CSS End */
