--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,20 @@ p a {
   color: #f53455;
 }
 
+.primary-btn a {
+  display: block;
+  width: 160px;
+  font-size: 17px;
+  font-weight: 600;
+  line-height: 188%;
+  letter-spacing: -0.6px;
+  text-align: center;
+  color: var(--white);
+  background: var(--primary);
+  padding: 15px;
+  border-radius: 8px;
+}
+
 /* Base Style CSS End */
 
 /* Header Part CSS Start */
@@ -422,5 +436,52 @@ p a {
 }
 
 /* Mobile Navigation Section CSS End */
+
+/* Hero Section CSS Start */
+
+.hero-container {
+  background: url(../images/home-hero-bg.webp);
+  background-repeat: no-repeat;
+  padding: 113px 0;
+  border-radius: 10px;
+}
+
+.hero-container::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #0a0d17;
+  border-radius: 10px;
+  z-index: -1;
+}
+
+.hero-content {
+  max-width: 650px;
+  margin: auto;
+  text-align: center;
+}
+
+.hero-content h6 {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 22px;
+  text-transform: uppercase;
+  color: #f4f7fa;
+  margin: 0;
+}
+
+.hero-content h1 {
+  font-size: 65px;
+  font-weight: 700;
+  line-height: 100%;
+  color: var(--white);
+  padding: 20px 0;
+  margin-bottom: 20px;
+}
+
+/* Hero Section CSS End */
 
 /* Header Part CSS End */
