--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -532,7 +532,7 @@ p a {
 
 .preferred-top p {
   font-weight: 400;
-  padding-top: 20px;
+  padding-top: 10px;
 }
 
 .preferred-brands {
@@ -546,5 +546,168 @@ p a {
 }
 
 /* Preferred Section CSS End */
+
+/* Services Section CSS Start */
+
+.services-top h2 {
+  max-width: 770px;
+  margin: auto;
+  text-align: center;
+}
+
+.services-top p {
+  max-width: 850px;
+  margin: auto;
+  text-align: center;
+  padding-top: 15px;
+}
+
+.service-card {
+  padding-top: 60px;
+}
+
+.services-card-img img {
+  max-width: 100%;
+  width: 100%;
+  max-height: 200px;
+  height: 100%;
+  border-radius: 10px;
+}
+
+.service-card-content {
+  padding-top: 20px;
+}
+
+.service-card-content h5 {
+  font-size: 21px;
+  font-weight: 700;
+  line-height: 150%;
+  letter-spacing: -0.5px;
+  color: var(--black);
+}
+
+.service-card-content p {
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 170%;
+  letter-spacing: -0.2px;
+  color: var(--black);
+  opacity: 0.7;
+}
+
+.learn-more-btn a {
+  font-size: 17px;
+  font-weight: 700;
+  line-height: 188%;
+  letter-spacing: -0.6px;
+  text-decoration-line: underline;
+  color: var(--primary);
+}
+
+.learn-more-btn a i {
+  padding-left: 20px;
+}
+
+/* Services Section CSS End */
+
+/* Guarantee Section CSS Start */
+
+.guarantee-wrapper {
+  background: var(--secondary);
+}
+
+.guarantee-content {
+  max-width: 450px;
+}
+
+.guarantee-content h2 {
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 119%;
+  color: var(--white);
+}
+
+.guarantee-content p {
+  font-size: 19px;
+  font-weight: 400;
+  line-height: 168%;
+  letter-spacing: -0.2px;
+  color: var(--white);
+  opacity: 0.9;
+}
+
+.guarantee-buttons a:hover {
+  color: var(--secondary);
+  background: var(--white);
+}
+
+.guarantee-content span {
+  display: block;
+  font-size: 11px;
+  font-weight: 400;
+  line-height: 155%;
+  letter-spacing: -0.2px;
+  color: var(--white);
+  opacity: 0.9;
+  padding-top: 40px;
+}
+
+/* Guarantee Section CSS End */
+
+/* Review Section CSS Start */
+
+.review-top {
+  max-width: 720px;
+  margin: auto;
+  text-align: center;
+}
+
+.review-top p {
+  padding-top: 15px;
+  line-height: 32px;
+  letter-spacing: -0.2px;
+  color: var(--secondary);
+  opacity: 0.7;
+}
+
+.review-card {
+  padding: 30px;
+  margin-top: 40px;
+  background: var(--white);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border: 1px solid #e7e9ed;
+  border-radius: 10px;
+}
+
+.review-content h5 {
+  font-size: 21px;
+  font-weight: 500;
+  line-height: 152%;
+  letter-spacing: -0.5px;
+  color: var(--secondary);
+  margin-bottom: 0;
+}
+
+.star i {
+  color: #fbbc02;
+}
+
+.client-name h6 {
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: -0.2px;
+  color: #737373;
+  padding-top: 5px;
+}
+
+.client-name span {
+  font-size: 15px;
+  font-weight: 400;
+  letter-spacing: -0.2px;
+  color: var(--secondary);
+  opacity: 0.7;
+}
+
+/* Review Section CSS End */
 
 /* Main Part CSS End */
