--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -617,6 +617,11 @@ p a {
   background: var(--secondary);
 }
 
+.guarantee-container {
+  max-width: 1000px;
+  margin: auto;
+}
+
 .guarantee-content {
   max-width: 450px;
 }
@@ -830,3 +835,89 @@ p a {
 /* Work Section CSS End */
 
 /* Main Part CSS End */
+
+/* Footer Part CSS Start */
+
+.footer-menu h6 {
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 173%;
+  letter-spacing: -0.1px;
+  color: var(--secondary);
+  opacity: 0.7;
+  margin-bottom: 0;
+}
+
+.footer-nav {
+  padding-top: 10px;
+}
+
+.footer-nav ul li {
+  padding: 7px 0;
+}
+
+.footer-nav ul li a {
+  font-size: 17px;
+  font-weight: 400;
+  letter-spacing: -0.2px;
+  text-decoration: underline;
+  color: #181f32;
+}
+
+.footer-wrapper hr {
+  margin: 30px 0;
+  border-top: 1px solid #e7e9ed;
+  opacity: 1;
+}
+
+.footer-copyright p,
+.footer-copyright p a {
+  font-size: 15px;
+  font-weight: 500;
+  letter-spacing: -0.1px;
+  color: var(--secondary) !important;
+  margin-bottom: 0;
+  opacity: 1;
+}
+
+.footer-social ul li {
+  padding-left: 28px;
+}
+
+.footer-social ul li a i {
+  font-size: 20px;
+  color: var(--black);
+}
+
+/* Footer Part CSS End */
+
+/* FAQ Section CSS Start */
+
+.faq-wrapper {
+  background: var(--secondary);
+}
+
+.faq-content {
+  max-width: 450px;
+}
+
+.faq-content h2 {
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 121%;
+  letter-spacing: -1.8px;
+  color: var(--white);
+  margin-bottom: 25px;
+}
+
+.faq-content p {
+  font-size: 19px;
+  font-weight: 400;
+  line-height: 168%;
+  letter-spacing: -0.2px;
+  color: var(--white);
+  opacity: 0.65;
+  margin-bottom: 0;
+}
+
+/* FAQ Section CSS End */
