--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -920,4 +920,55 @@ p a {
   margin-bottom: 0;
 }
 
+.accordion-container {
+  position: relative;
+  background: var(--white);
+  padding: 28px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.accordion-container::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  background: var(--primary);
+}
+
+.accordion-item {
+  padding: 20px 0;
+  border: 1px solid #979797;
+}
+
+.accordion-button {
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: -0.5px;
+  color: var(--secondary);
+  padding: 0;
+}
+
+.accordion-button:focus {
+  background: none;
+  box-shadow: none;
+}
+
+.accordion-body {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+
+.accordion-body p {
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 129%;
+  letter-spacing: -0.2px;
+  color: var(--secondary);
+  opacity: 0.7;
+  margin-bottom: 0;
+}
+
 /* FAQ Section CSS End */
