--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -455,6 +455,7 @@ p a {
 
 .hero-container {
   background: url(../images/home-hero-bg.webp);
+  background-size: cover;
   background-repeat: no-repeat;
   padding: 113px 0;
   border-radius: 10px;
@@ -565,7 +566,12 @@ p a {
 }
 
 .service-card {
-  padding-top: 60px;
+  margin-top: 60px;
+  transition: all 0.3s ease-in-out;
+}
+
+.service-card:hover {
+  box-shadow: 0px 4px 3px 0px #979797;
 }
 
 .services-card-img img {
@@ -577,7 +583,7 @@ p a {
 }
 
 .service-card-content {
-  padding-top: 20px;
+  padding: 20px 5px 5px;
 }
 
 .service-card-content h5 {
@@ -598,12 +604,14 @@ p a {
 }
 
 .learn-more-btn a {
+  display: block;
   font-size: 17px;
   font-weight: 700;
   line-height: 188%;
   letter-spacing: -0.6px;
   text-decoration-line: underline;
   color: var(--primary);
+  padding-left: 5px;
 }
 
 .learn-more-btn a i {
@@ -688,6 +696,11 @@ p a {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border: 1px solid #e7e9ed;
   border-radius: 10px;
+  transition: all 0.3s ease-in-out;
+}
+
+.review-card:hover {
+  box-shadow: 0px 4px 3px 0px #979797;
 }
 
 .review-content h5 {
@@ -786,6 +799,11 @@ p a {
 
 .work-card {
   margin-top: 40px;
+  transition: all 0.3s ease-in-out;
+}
+
+.work-card:hover {
+  box-shadow: 0px 4px 3px 0px #979797;
 }
 
 .work-card-img img {
@@ -813,7 +831,7 @@ p a {
 }
 
 .work-card-content {
-  padding-top: 30px;
+  padding: 30px 5px 5px;
 }
 
 .work-card-content h5 {
