--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -780,6 +780,7 @@ p a:hover {
 .specialise-top p {
   padding-top: 15px;
   font-weight: 600;
+  margin-bottom: 0;
 }
 
 .specialise-cards {
@@ -1231,3 +1232,300 @@ About Us Page CSS
 }
 
 /* Client Needs Section CSS End */
+
+/* ===============***==============
+Debt Collection Services  Page CSS
+===============***============== */
+
+/* Services Hero Section CSS Start */
+
+.services-hero-container {
+  background: url(../images/services-hero-bg.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* Services Hero Section CSS End */
+
+.services-work-wrapper {
+  background: var(--white);
+}
+
+/* ===============***==============
+Commercial Debt Collection Page CSS
+===============***============== */
+
+/* Commercial Debt Collection Hero Section CSS Start */
+
+.cdc-hero-container {
+  background: url(../images/commercial-debt-collection-hero-bg.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* Commercial Debt Collection Hero Section CSS End */
+
+/* What Section CSS Start */
+
+.what-container {
+  max-width: 730px;
+  margin: auto;
+  padding-top: 15px;
+}
+
+.what-container p {
+  padding-top: 5px;
+}
+
+/* What Section CSS End */
+
+/* ===============***==============
+Debt Collection Page CSS
+===============***============== */
+
+/* Debt Collection Hero Section CSS Start */
+
+.dc-hero-container {
+  background: url(../images/debt-collection-hero-bg.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* Debt Collection Hero Section CSS End */
+
+/* ===============***==============
+Debt Collector Page CSS
+===============***============== */
+
+/* Debt Collector Hero Section CSS Start */
+
+.dcollector-hero-container {
+  background: url(../images/debt-collector-hero-bg.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* Debt Collector Hero Section CSS End */
+
+/* ===============***==============
+Debt Recovery Page CSS
+===============***============== */
+
+/* Debt Recovery Hero Section CSS Start */
+
+.dr-hero-container {
+  background: url(../images/debt-recovery-hero-bg.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* Debt Recovery Hero Section CSS End */
+
+/* ===============***==============
+Personal Debt Collection Page CSS
+===============***============== */
+
+/* Personal Debt Collection Hero Section CSS Start */
+
+.pdc-hero-container {
+  background: url(../images/personal-debt-collection-hero-bg.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* Personal Debt Collection Hero Section CSS End */
+
+/* ===============***==============
+Small Busniess Debt Collection Page CSS
+===============***============== */
+
+/* Small Busniess Debt Collection Hero Section CSS Start */
+
+.sbdc-hero-container {
+  background: url(../images/small-business-debt-collection-hero-bg.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* Small Busniess Debt Collection Hero Section CSS End */
+
+/* ===============***==============
+Debt Collection Agency Page CSS
+===============***============== */
+
+/* Debt Collection Agency Hero Section CSS Start */
+
+.dca-hero-container {
+  background: url(../images/home-hero-bg.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* Debt Collection Agency Hero Section CSS End */
+
+/* ==========***=========
+Hobart Page CSS
+==========***========= */
+
+/* Hobart Hero Section CSS Start */
+
+.hobart-hero-container {
+  background: url(../images/hobart-hero-bg.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* Hobart Hero Section CSS End */
+
+/* ==========***=========
+Launceston Page CSS
+==========***========= */
+
+/* Launceston Hero Section CSS Start */
+
+.launceston-hero-container {
+  background: url(../images/launceston-hero-bg.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* Launceston Hero Section CSS End */
+
+/* =========***========
+Contact Us Page CSS
+=========***======== */
+
+/* Contact Us Hero Section CSS Start */
+
+.contact-hero-container {
+  background: url(../images/contact-us-hero-bg.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* Contact Us Hero Section CSS End */
+
+.contact-review-wrapper {
+  background: var(--white);
+}
+
+.contact-specialise-wrapper {
+  background: #f8f8f8;
+}
+
+/* Contact Form Section CSS Start */
+
+.contact-form-wrapper {
+  background: var(--secondary);
+  padding: 60px 0 80px;
+  margin-top: 70px;
+}
+
+.contact-title h2 {
+  font-size: 40px;
+  font-weight: 700;
+  text-align: center;
+  color: var(--white);
+}
+
+.contact-from,
+.contact-info-cards {
+  max-width: 696px;
+  width: 100%;
+  margin: auto;
+  padding-top: 40px;
+}
+
+.contact-input-field label {
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--white);
+  padding-bottom: 5px;
+}
+
+.contact-input-field input,
+.contact-input-field textarea {
+  width: 100%;
+  padding: 10px 0 10px 15px;
+  margin-bottom: 20px;
+  border: 2px solid #646974;
+  border-radius: 6px;
+}
+
+.contact-input-field input:focus,
+.contact-input-field textarea:focus {
+  outline: 0;
+}
+
+.contact-from ::placeholder {
+  font-size: 16px;
+  color: var(--dark);
+}
+
+.submit-btn button {
+  display: block;
+  width: 100%;
+  font-size: 18px;
+  font-weight: 600;
+  padding: 17px;
+  color: var(--white);
+  background: var(--primary);
+  border: none;
+  border-radius: 8px;
+}
+
+.contact-bottom-container {
+  max-width: 750px;
+  margin: auto;
+  padding: 80px 0;
+}
+
+.contact-bottom-card h2 {
+  text-align: left;
+  margin-bottom: 30px;
+}
+
+.contact-bottom-card p,
+.contact-bottom-card ol li {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  color: var(--black);
+  opacity: 1;
+}
+
+.contact-bottom-card p span {
+  font-weight: 700;
+}
+
+.contact-bottom-card p a {
+  font-weight: 400;
+}
+
+.contact-bottom-card ol {
+  padding-left: 20px;
+}
+
+.contact-bottom-card ol li {
+  list-style: initial;
+}
+
+/* Contact Form Section CSS End */
+
+/* =======***======
+Error Page CSS
+=======***====== */
+
+/* Error Section CSS Start */
+
+.error-wrapper {
+  max-width: 1000px;
+  margin: auto;
+  text-align: center;
+  padding: 50px 0;
+}
+
+.back-home-btn a {
+  width: 200px;
+}
+
+/* Error Section CSS End */
