--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1341,10 +1341,10 @@ Personal Debt Collection Page CSS
 /* Personal Debt Collection Hero Section CSS End */
 
 /* ===============***==============
-Small Busniess Debt Collection Page CSS
+Small Business Debt Collection Page CSS
 ===============***============== */
 
-/* Small Busniess Debt Collection Hero Section CSS Start */
+/* Small Business Debt Collection Hero Section CSS Start */
 
 .sbdc-hero-container {
   background: url(../images/small-business-debt-collection-hero-bg.webp);
@@ -1352,7 +1352,7 @@ Small Busniess Debt Collection Page CSS
   background-repeat: no-repeat;
 }
 
-/* Small Busniess Debt Collection Hero Section CSS End */
+/* Small Business Debt Collection Hero Section CSS End */
 
 /* ===============***==============
 Debt Collection Agency Page CSS
